--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -22,6 +22,15 @@
 	transition: all ease 0.25s;
 }
 
+.btn:disabled,
+.btn:hover {
+	background-color: #cecece;
+	cursor: none;
+	color: var(--background-label);
+	box-shadow: none;
+	opacity: 0.7;
+}
+
 .btn:hover {
 	background-color: var(--background-label);
 	color: var(--primary-blue);
